frontend/test/should_fail/pattern_010.grg
using patt;

pattern Foo modify(a:A, b:B)
{
	n:Node;
	
	modify {
		a --> n <-- b;
        eval {
            x3.a = 7;
        }
	}	
}

rule r {
	foo:Foo();

	modify {
		a:A;
		b:B; 
		foo(a, b);
	}
}
